# token-monitor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config-backup/: CONFIG-BACKUP.md  global-claude-md-section.md
config-backup/skills/retro/: SKILL.md
docs/: brainstorm.md
docs/archive/: 2026-04-04-token-monitoring-design.md
docs/references/: jsonl-format.md
tests/: test_cli.py  test_context.py  test_parser.py  test_report.py
token_monitor/: __init__.py  __main__.py  cli.py  context.py  parser.py  report.py
