[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "token-monitor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
token-usage = "token_monitor.cli:main"

[tool.setuptools.packages.find]
include = ["token_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
